--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "saju",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "primereact": "^10.0.9",
-    "react": "^18.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.3",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.2.0",
     "react-scripts": "5.0.1",
-    "saju": "file:",
-    "sass": "^1.63.6",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.49.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,8 +21,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
