--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.2.0",
     "react-scripts": "5.0.1",
+    "saju": "file:",
     "sass": "^1.49.0"
   },
   "scripts": {
